# cudaqlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: CMakeLists.txt  cudaq-gseConfig.cmake  cudaq-kernelsConfig.cmake  cudaq-operatorsConfig.cmake  cudaq-optimConfig.cmake  cudaqlibConfig.cmake
cudaqlib/: CMakeLists.txt  gse.h  operators.h  optim.h
cudaqlib/gse/: CMakeLists.txt
cudaqlib/gse/adapt/: adapt.h  fast_adapt.h  operator_pool.h
cudaqlib/gse/adapt/pools/: spin_complement_gsd.h
cudaqlib/gse/utils/: CMakeLists.txt  operator_pool.h
cudaqlib/gse/utils/pools/: CMakeLists.txt  spin_complement_gsd.cpp  spin_complement_gsd.h  uccsd_pool.cpp  uccsd_pool.h
cudaqlib/gse/vqe/: vqe.h
cudaqlib/kernels/: CMakeLists.txt  uccsd.h
cudaqlib/operators/: CMakeLists.txt
cudaqlib/operators/chemistry/: MoleculePackageDriver.h  molecule.cpp  molecule.h
cudaqlib/operators/chemistry/drivers/pyscf/: ExternalPySCFDriver.cpp  RESTPySCFDriver.cpp
cudaqlib/operators/fermion/: fermion_compiler.h  fermion_op.cpp  fermion_op.h  fermion_operators.cpp  fermion_operators.h  fermion_to_spin.h
cudaqlib/operators/fermion/transformations/: jordan_wigner.cpp  jordan_wigner.h
cudaqlib/optim/: CMakeLists.txt  observe_gradient.h  optimizer.h
cudaqlib/optim/impls/: CMakeLists.txt
cudaqlib/optim/impls/gradients/: central_difference.h  forward_difference.h  parameter_shift.h
cudaqlib/optim/impls/lbfgs/: CMakeLists.txt  LBFGSObjective.cpp  LBFGSObjective.h  lbfgs.cpp  lbfgs.h
cudaqlib/optim/impls/prima/: CMakeLists.txt  cobyla.cpp  cobyla.h
cudaqlib/optim/impls/prima/prima/c/: CMakeLists.txt
cudaqlib/optim/impls/prima/prima/c/include/prima/: prima.h
cudaqlib/optim/impls/prima/prima/fortran/: CMakeLists.txt
cudaqlib/optim/impls/prima/prima/fortran/common/: ppf.h
cudaqlib/utils/: extension_point.h  library_utils.h
docker/: Dockerfile
docker/base/: Dockerfile
docker/ci/: Dockerfile
examples/python/: README.md  co2_18qubits.py  gqe_co2_18q.py  gqe_h2.py  gqe_h2_async.py  gqe_h2_async_mpi.py  run.sh
python/: CMakeLists.txt
python/bindings/: cudaqlib.cpp
python/bindings/gse/: py_gse.cpp  py_gse.h
python/bindings/operators/: py_operators.cpp  py_operators.h
python/bindings/optim/: py_optimizer.cpp  py_optimizer.h
python/bindings/utils/: type_casters.h  utils.h
python/cudaqlib/: __init__.py
python/cudaqlib/algorithms/: gqe.py  loss.py  transformer.py
python/cudaqlib/kernels/: __init__.py
python/cudaqlib/tools/chemistry/pyscf/: hamiltonian_generator.py
python/cudaqlib/tools/chemistry/pyscf/generators/: gas_phase_generator.py  polarizable_embedded_generator.py
python/cudaqlib/tools/chemistry/pyscf/generators/utils/: cppe_wrapper.py
python/tests/: CMakeLists.txt  test_active_space.py  test_gqe.py  test_gse.py  test_operators.py  test_optim.py  test_pyscf_tool.py  test_uccsd.py
python/tests/resources/: CO2.xyz  COH2.xyz  LiH.xyz  N2.xyz  water-II.pot
tests/: CMakeLists.txt
tests/gse/: AdaptTester.cpp  VQETester.cpp
tests/kernels/: UCCSDTester.cpp
tests/operators/: OperatorsTester.cpp
tests/optim/: OptimTester.cpp
tools/: CMakeLists.txt
tools/chemistry/: CMakeLists.txt  cudaq-pyscf.py
